--- a/LaboratorioClinico.API/LaboratorioClinico.API.csproj
+++ b/LaboratorioClinico.API/LaboratorioClinico.API.csproj
@@ -9,6 +9,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LaboratorioClinico.Data\LaboratorioClinico.Data.csproj" />
+    <ProjectReference Include="..\LaboratorioClinico.Models\LaboratorioClinico.Models.csproj" />
   </ItemGroup>
 
 </Project>
