--- a/LaboratorioClinico.MVC/appsettings.json
+++ b/LaboratorioClinico.MVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApiSettings": {
+    "BaseUrl": "https://localhost:7165/api/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
